--- a/escolar/core/templates/base_aluno.html
+++ b/escolar/core/templates/base_aluno.html
@@ -2,7 +2,7 @@
   {% if escola.id %}
     {% if aluno.pk %}
       <li class="{{ tab_aluno }}"><a href="{% url 'aluno_cadastro' aluno.pk %}" id='id_escola'>Aluno</a></li>
-      <li class="{{ tab_responsaveis_aluno }}"><a href="{% url 'membros_familia_list' aluno.id %}">Responsáveis</a></li>
+      <li class="{{ tab_responsaveis_aluno }}"><a href="{% url 'membros_familia_list' aluno.id %}">Familiares</a></li>
       <li class="{{ tab_autorizados_aluno }}"><a href="{% url 'autorizados_aluno_list' aluno.id %}">Autorizados</a></li>
       <!--     <li class="{{ tab_usuarios }}"><a href="#" id='id_usuarios'>Boletim</a></li>
       <li class=""><a href="#" id='id_classes'>Faltas</a></li>
