--- a/escolar/escolas/templates/escolas/membros_familia_aluno_list.html
+++ b/escolar/escolas/templates/escolas/membros_familia_aluno_list.html
@@ -41,7 +41,7 @@
         {% for membro in object_list %}
           <tr>
             {% if can_edit %}
-              <td><a href="{% url 'membro_familia_form' aluno.pk membro.pk %}">{{ membro.nome }}</a></td>
+              <td><a href="{% url 'membro_familia_cadastro' aluno.pk membro.pk %}">{{ membro.nome }}</a></td>
             {% else %}
               <td>{{ membro.nome }}</td>
             {% endif %}
