ref #42 coloca o nome do botão no padrão 'Novo xxx' todas as listagens estão assim

--- a/escolar/escolas/templates/escolas/membros_familia_aluno_list.html
+++ b/escolar/escolas/templates/escolas/membros_familia_aluno_list.html
@@ -22,7 +22,7 @@
         {% if can_edit %}
         <caption>
            <div style="float:right; margin-right:10px">
-              <a href="{% url 'membro_familia_form' aluno.id %}" class="btn btn-mini btn-success">Adicionar</a>
+              <a href="{% url 'membro_familia_form' aluno.id %}" class="btn btn-mini btn-success">Novo Familiar</a>
            </div>
         </caption>
         {% endif %}
