ref #42 padroniza a mensagem de lista vazia:  'xxx' cadastrado

--- a/escolar/escolas/templates/escolas/membros_familia_aluno_list.html
+++ b/escolar/escolas/templates/escolas/membros_familia_aluno_list.html
@@ -54,7 +54,7 @@
         {% empty %}
         <tr>
           <td>
-              Nenhum membro da família encontrado
+              Nenhum membro da família cadastrado
           </td>
         </tr>
         {% endfor %}
