--- a/escolar/financeiro/templates/financeiro/contratos_list.html
+++ b/escolar/financeiro/templates/financeiro/contratos_list.html
@@ -65,7 +65,7 @@
     {% empty %}
     <tr>
       <td>
-        Nenhum contrato encontrado
+        Nenhum contrato cadastrado
       </td>
     </tr>
     {% endfor %}
