--- a/escolar/financeiro/templates/financeiro/contratos_aluno_list.html
+++ b/escolar/financeiro/templates/financeiro/contratos_aluno_list.html
@@ -48,7 +48,7 @@
       {% empty %}
       <tr>
         <td>
-          Nenhum contrato encontrado
+          Nenhum contrato cadastrado
         </td>
       </tr>
       {% endfor %}
