ref #47 cria o modelo feriado, que guarda os feriados municipais, estaduais e nacionais provisóriamente por uma função CONSULTA que está no arquivo brasil_feriados.py, isso deve ir para um Command e ser agendado no cron para apagar feriados de anos que não interessam e popular com feriados de ano que interssa de acordo com as cidades das escolas; cria um modelo para Parametros dos contratos e um CategoriaPagamento com algumas categorias default e outras expecíficas por escola; finaliza o metodo que identifica o dia útil

--- a/escolar/escolas/templates/escolas/escola_cadastro.html
+++ b/escolar/escolas/templates/escolas/escola_cadastro.html
@@ -20,7 +20,8 @@
    {% include "base_adm.html" %}
     <div class="row-fluid span10">
         País: <b>{{ escola.pais }}</b><br>
-        Nome: <b>{{ escola.nome }}</b><br> 
+        Nome: <b>{{ escola.nome }}</b><br>
+        Município:<b>{{ escola.municipio }}</b><br>
         Endereço: <b>{{ escola.endereco }}</b><br> 
         Número: <b>{{ escola.numero }}</b><br> 
         complemento: <b>{{ escola.complemento }}</b><br> 
