ref #48 templates do formulario e do cadastro dos parâmetros, Cria os parâmentros iniciais no save do form da escola, não tem formulario de criação dos parâmetros, só de edição; migration com a categoria dos pagamentos Null true

--- a/escolar/escolas/templates/escolas/escola_form.html
+++ b/escolar/escolas/templates/escolas/escola_form.html
@@ -2,9 +2,15 @@
 {% load bootstrap3 %}
 
 {% block page_title %}
-
-    <!-- TODO erver esse br -->
-    <br>
+  <div class="page-header">
+  <!-- TODO erver esse br -->
+  <br>
+    {% if escola %}
+        Escola: {{ escola.nome }}
+    {% else %}
+        Cadastro de Escola
+    {% endif %}
+  </div>
 {% endblock page_title %}
 
 {% block content %}
