ref #48 início das validações de campos dos parâmetros

--- a/escolar/financeiro/templates/financeiro/parametros_contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/parametros_contrato_form.html
@@ -39,6 +39,7 @@
   <div class="row-fluid span10">
     <br>
     <form method="POST" enctype="multipart/form-data">
+      {{ form.errors }}
       {% csrf_token %}
         <div class="form-group center_div" >
           <div class="row">
