--- a/escolar/core/templates/nav_gestor.html
+++ b/escolar/core/templates/nav_gestor.html
@@ -28,7 +28,7 @@
                     <li class="{{ tab_parametros }}"><a href="{% url 'parametro_cadastro' escola.id %}" title="{{ section.name }}">Parâmetros dos Contratos</a></li>
                     <li class="{{ tab_contratos }}"><a href="{% url 'contratos_list' escola.id %}" id='contratos'>Contratos</a></li>
                     <li class="{{ tab_parcelas }}"><a href="{% url 'pagamentos_list' escola.id %}" id='id_movimentos'>Pagamentos</a></li>
-                    <li><a href="" title="{{ section.name }}">Cartões</a></li>
+                    <!-- <li><a href="" title="{{ section.name }}">Cartões</a></li> -->
                   </ul>
                 </li>
                 <!-- <li class="{{ tab_parcelas }}"><a href="{% url 'pagamentos_list' escola.id %}" id='id_movimentos'>Pagamentos</a></li> -->
