ref #51 ajustes no método que cria as parcelas; pequenos ajustes gerais

--- a/escolar/financeiro/templates/financeiro/contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/contrato_form.html
@@ -39,7 +39,7 @@
           </div>
           <div class="col-xs-9 col-sm-6 col-md-3">
             <p>{% bootstrap_field form.nr_parcela %}</p>
-            <p>{% bootstrap_field form.desconto %} (%)</p>
+            <p>{% bootstrap_field form.desconto %}</p>
             <p>{% bootstrap_field form.matricula_nr %}</p>
             <p>{% bootstrap_field form.matricula_valor %}</p>
           </div>
