--- a/escolar/financeiro/templates/financeiro/contratos_aluno_list.html
+++ b/escolar/financeiro/templates/financeiro/contratos_aluno_list.html
@@ -25,7 +25,7 @@
           <caption>
             <div style="float:right; margin-right:10px">
               <a href="{% url 'contrato_form' aluno.id %}" class="btn btn-mini btn-success">Novo Contrato</a>
-            div>
+            </div>
           </caption>
         {% endif %}
       {% endif %}
