--- a/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
@@ -34,13 +34,16 @@
       <button type="submit" class="btn btn-primary" title="Filtrar"><i class="glyphicon glyphicon-search"></i></button>
       <a class="btn btn-small btn-info" href="." title="Apagar o filtro e listar todos"><i class="glyphicon glyphicon-remove-circle"></i></a>
       {% if can_create %}
-      <caption>
-       <div style="float:right; margin-right:10px">
-        <a href="{% url 'pagamento_contrato_form' escola.id contrato.id %}" class="btn btn-mini btn-success">Novo Pagamento</a>
-       </div>
-      </caption>
-    {% endif %}
+        <caption>
+         <div style="float:right; margin-right:10px">
+          <a href="{% url 'pagamento_contrato_form' escola.id contrato.id %}" class="btn btn-mini btn-success">Novo Pagamento</a>
+         </div>
+        </caption>
+      {% endif %}
     </form>
+      {% if not contrato %}
+        <div class="alert alert-warning">Não tem Contrato</div>
+      {% endif %}
     <table class="table table-striped">
     <thead>
       <tr>
