--- a/escolar/financeiro/templates/financeiro/parametros_contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/parametros_contrato_form.html
@@ -47,10 +47,12 @@
             <div class="col-xs-9 col-sm-6 col-md-3">
               <p>{% bootstrap_field form.ano %}</p>
               <p>{% bootstrap_field form.tem_desconto %}</p>
+              <p>{% bootstrap_field form.desconto %}</p>
               <p>{% bootstrap_field form.condicao_desconto %}</p>
               <p>{% bootstrap_field form.dia_util %}</p>
             </div>
             <div class="col-xs-9 col-sm-6 col-md-3">
+              <p>{% bootstrap_field form.matricula_valor%}</p>
               <p>{% bootstrap_field form.multa %}</p>
               <p>{% bootstrap_field form.juros %}</p>
               <p>{% bootstrap_field form.condicao_juros %}</p>
