--- a/escolar/financeiro/templates/financeiro/contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/contrato_form.html
@@ -35,35 +35,39 @@
               <p><b>Aluno</b>:{{ aluno.nome }}</p>
               <p>{% bootstrap_field form.responsavel %}</p>
               <p>{% bootstrap_field form.valor %}</p>
+            </div>
+            <div class="col-xs-9 col-sm-6 col-md-3">
+              <p>{% bootstrap_field form.tem_desconto %}</p>
+              <p>{% bootstrap_field form.desconto %}</p>
+              <p>{% bootstrap_field form.condicao_desconto %}</p>
+              <p>{% bootstrap_field form.multa %}</p>
+              <p>{% bootstrap_field form.juros %}</p>
+              <p>{% bootstrap_field form.nr_parcela %}</p>
+            </div>
+            <div class="col-xs-9 col-sm-6 col-md-3">
+              <p>{% bootstrap_field form.matricula_nr %}</p>
+              <p>{% bootstrap_field form.matricula_valor %}</p>
+              <p>{% bootstrap_field form.vencimento %}</p>
+              <small>Apostilas</small>
+              <p>{% bootstrap_field form.material_valor %}</p>
+              <p>{% bootstrap_field form.material_parcelas %}</p>
+            </div>
+            <div class="col-xs-9 col-sm-6 col-md-3">
               <p>{% bootstrap_field form.data_assinatura %}</p>
-          </div>
-          <div class="col-xs-9 col-sm-6 col-md-3">
-            <p>{% bootstrap_field form.nr_parcela %}</p>
-            <p>{% bootstrap_field form.desconto %}</p>
-            <p>{% bootstrap_field form.matricula_nr %}</p>
-            <p>{% bootstrap_field form.matricula_valor %}</p>
-          </div>
-          <div class="col-xs-9 col-sm-6 col-md-3">
-            <p>{% bootstrap_field form.vencimento %}</p>
-            <p>{% bootstrap_field form.contrato %}</p>
-            <small>Apostilas</small>
-            <p>{% bootstrap_field form.material_valor %}</p>
-            <p>{% bootstrap_field form.material_parcelas %}</p>
-            <p>{% bootstrap_field form.material_data_parcela_um %}</p>
+              <p>{% bootstrap_field form.contrato %}</p>
+            </div>
           </div>
         </div>
-      </div>
-
-      <!-- glyphicon glyphicon-print -->
-      <div class="form-actions">
-        {% if can_edit %}
-          <input type="submit" value="Salvar" class="btn btn-primary">
-        {% endif %}
-        {% if contrato %}
-          <a href="{% url 'contrato_cadastro' contrato.id %}" class="btn btn-secondary">Voltar para o contrato {{ form.instance.ano }}</a>
-        {% endif %}
-        <a href="{% url 'contratos_aluno_list' aluno.id %}" class="btn btn-secondary">Contratos do aluno</a>
-      </div>
+        <!-- glyphicon glyphicon-print -->
+        <div class="form-actions">
+          {% if can_edit %}
+            <input type="submit" value="Salvar" class="btn btn-primary">
+          {% endif %}
+          {% if contrato %}
+            <a href="{% url 'contrato_cadastro' contrato.id %}" class="btn btn-secondary">Voltar para o contrato {{ form.instance.ano }}</a>
+          {% endif %}
+          <a href="{% url 'contratos_aluno_list' aluno.id %}" class="btn btn-secondary">Contratos do aluno</a>
+        </div>
     </form>
   </div>
 </div>
