--- a/escolar/financeiro/templates/financeiro/parametros_contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/parametros_contrato_form.html
@@ -3,7 +3,10 @@
 {% block css %}
   <style type="text/css">
     #id_ano,
+    #id_vencimento,
+    #id_desconto,
     #id_material_parcelas,
+    #id_matricula_valor,
     #id_multa,
     #id_juros,
     #id_condicao_juros,
@@ -47,6 +50,7 @@
             <div class="col-xs-9 col-sm-6 col-md-3">
               <p>{% bootstrap_field form.ano %}</p>
               <p>{% bootstrap_field form.tem_desconto %}</p>
+              <p>{% bootstrap_field form.vencimento %}</p>
               <p>{% bootstrap_field form.desconto %}</p>
               <p>{% bootstrap_field form.condicao_desconto %}</p>
               <p>{% bootstrap_field form.dia_util %}</p>
