ref #53 coloca o 'dia_util' no formulario do contrato; calculo do desconto para contrato pore dia útil, feito por atributos do contrato

--- a/escolar/financeiro/templates/financeiro/contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/contrato_form.html
@@ -54,6 +54,7 @@
               <p>{% bootstrap_field form.tem_desconto %}</p>
               <p>{% bootstrap_field form.desconto %}</p>
               <p>{% bootstrap_field form.condicao_desconto %}</p>
+              <p>{% bootstrap_field form.dia_util %}</p>
               <p>{% bootstrap_field form.multa %}</p>
               <p>{% bootstrap_field form.juros %}</p>
               <p>{% bootstrap_field form.nr_parcela %}</p>
