--- a/escolar/financeiro/templates/financeiro/contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/contrato_form.html
@@ -51,20 +51,21 @@
               <p>{% bootstrap_field form.valor %}</p>
             </div>
             <div class="col-xs-9 col-sm-6 col-md-3">
+              <p>{% bootstrap_field form.vencimento %}</p>
               <p>{% bootstrap_field form.tem_desconto %}</p>
               <p>{% bootstrap_field form.desconto %}</p>
               <p>{% bootstrap_field form.condicao_desconto %}</p>
               <p>{% bootstrap_field form.dia_util %}</p>
+            </div>
+            <div class="col-xs-9 col-sm-6 col-md-3">
               <p>{% bootstrap_field form.multa %}</p>
               <p>{% bootstrap_field form.juros %}</p>
+              <p>{% bootstrap_field form.condicao_juros %}</p>
               <p>{% bootstrap_field form.nr_parcela %}</p>
             </div>
             <div class="col-xs-9 col-sm-6 col-md-3">
               <p>{% bootstrap_field form.matricula_nr %}</p>
               <p>{% bootstrap_field form.matricula_valor %}</p>
-              <p>{% bootstrap_field form.vencimento %}</p>
-            </div>
-            <div class="col-xs-9 col-sm-6 col-md-3">
               <small>Apostilas</small>
               <p>{% bootstrap_field form.material_valor %}</p>
               <p>{% bootstrap_field form.material_parcelas %}</p>
