ref #53 melhora as categorias de pagamentos, refaz o initial_data com essas categorias; se tiver contrato no contexto do form: as categorias disponíveis são as de id: 1, 2 9; se não tiver contrato o sistema usa as outras categorias

--- a/escolar/financeiro/templates/financeiro/pagamento_form.html
+++ b/escolar/financeiro/templates/financeiro/pagamento_form.html
@@ -49,7 +49,8 @@
             <div class="col-xs-9 col-sm-6 col-md-3">
              {% bootstrap_field form.titulo %}
              {% bootstrap_field form.nr_documento %}
-             {% if form.instance.categoria.id == 1 or form.instance.categoria.id == 2 %}
+             {% if form.instance.categoria.id == 1 or form.instance.categoria.id == 2 or form.instance.categoria.id == 9 %}
+             <b>Categoira</b><br>
                 {{ form.instance.categoria }}
              {% endif %} 
              {% bootstrap_field form.categoria %}
@@ -58,9 +59,7 @@
              {% bootstrap_field form.data_prevista %}
              {% bootstrap_field form.valor %}
              {% bootstrap_field form.tipo %}
-            <!-- {% bootstrap_field form.data_pag %}
-            {% bootstrap_field form.valor_pag %} -->
-            {% bootstrap_field form.efet %}
+             {% bootstrap_field form.efet %}
           </div>
           <div class="col-xs-9 col-sm-6 col-md-3">
             {% bootstrap_field form.observacao %}
