--- a/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
@@ -68,8 +68,13 @@
         </td>
         <td>{{ pagamento.data_prevista|date:'d/m/Y' }}</td>
        <!--  <td>{{ pagamento.data_pag|date:'d/m/Y'|default:"--" }}</td> -->
-        <td><font color="{{ pagamento.get_color_display }}">R$ {{ pagamento.valor|numberformat_br }}</font></td>
-        <!-- <td><font color="{{ pagamento.get_color_display }}">R$ {{ pagamento.get_valor_com_desconto|numberformat_br }}</font></td> -->
+        <td>
+          <font color="{{ pagamento.get_color_display }}">R$ {{ pagamento.valor|numberformat_br }}</font>
+          {% if pagamento.categoria.id == 1 and not pagamento.efet %}
+            <br>
+            <small>R$ {{ pagamento.get_valor_com_desconto|numberformat_br }}</small>
+          {% endif %}
+        </td>
         <td>{{ pagamento.contrato.responsavel.nome }}/<br>{{ pagamento.contrato.aluno.nome }}</td>
         <td>
           {% if pagamento.efet %}
