ref #50 volta uma MIGRATION para poder deixar os 'responsaveis' como opcional; não tem save m2m, os 'responsaveis' estão no exclude de AlunoForm; e ao criar um novo MembroFamilia, o Aluno é adicionado para o membro

--- a/escolar/escolas/templates/escolas/aluno_form.html
+++ b/escolar/escolas/templates/escolas/aluno_form.html
@@ -3,8 +3,14 @@
 {% block css %}
   {{ endereco_form.media.css }}
   <style type="text/css">
-    #id_serie, #id_ano, #id_ra {
-      width: 80px;
+    #id_serie,
+    #id_ano,
+    #id_ra {
+      width: 100px;
+      height: 35px;
+    }
+    #id_ra {
+      width: 135px;
       height: 35px;
     }
    </style>
