ref #50 MIGRATION para escola: cnpj e razão social; atualiza fixture escolas.json

--- a/escolar/escolas/templates/escolas/escola_cadastro.html
+++ b/escolar/escolas/templates/escolas/escola_cadastro.html
@@ -18,6 +18,8 @@
    {% include "base_adm.html" %}
     <div class="row-fluid span10">
         País: <b>{{ escola.pais }}</b><br>
+        Razão Social: <b>{{ escola.razao_social }}</b><br>
+        CNPJ: <b>{{ escola.cnpj }}</b><br>
         Nome: <b>{{ escola.nome }}</b><br>
         Município:<b>{{ escola.municipio }}</b><br>
         Endereço: <b>{{ escola.endereco }}</b><br> 
