ref #55 fixture de parametros da crescer; corrige email no erro 500

--- a/escolar/core/templates/500.html
+++ b/escolar/core/templates/500.html
@@ -15,7 +15,7 @@
                             <p>Desculpe. Ocorreu um erro inesperado.</p>
 
                             <p>Nossa equipe já foi notificada do problema.</p>
-                            <p>Caso necessário entre em contato com suporte@bolt.com.br</p>
+                            <p>Caso necessário entre em contato com fabianoalmeidasjc@gmail.com</p>
                         </div>
                     </div>
                 </div>
