--- a/escolar/escolas/templates/escolas/aluno_form.html
+++ b/escolar/escolas/templates/escolas/aluno_form.html
@@ -41,7 +41,9 @@
           <!-- {# Celular, Tablet, Computador #} -->
           <div class="col-xs-9 col-sm-6 col-md-3">
             {% bootstrap_field form.ano %}
-            {% bootstrap_field form.ra %}{% bootstrap_field form.sexo %}
+            {% bootstrap_field form.ra %}
+            {% bootstrap_field form.sexo %}
+            {% bootstrap_field form.curso %}
             <small>Dados do Aluno:</small>
             {% bootstrap_field form.nome %}
             {% bootstrap_field form.cpf %}
