--- a/escolar/escolas/templates/escolas/escola_form.html
+++ b/escolar/escolas/templates/escolas/escola_form.html
@@ -45,6 +45,7 @@
           </div>
           <div class="col-xs-9 col-sm-6 col-md-3">
             {% bootstrap_field form.description %}
+            {% bootstrap_field form.cursos %}
           </div>
       </div>
       <div class="form-group center_div">
