ref #56 ajustes nos filtros da listagem de alunos, para filtrar por curso e série

--- a/escolar/escolas/templates/escolas/alunos_list.html
+++ b/escolar/escolas/templates/escolas/alunos_list.html
@@ -62,7 +62,7 @@
               <td>{{ aluno.nome }}</td>
             {% endif %}
             <td>{{ aluno.nascimento|date:"d/m/Y"|default:'--' }}</td>
-            <td>{{ aluno.get_serie|default:"--" }} /<br>{{ aluno.get_curso|default:'--' }}</td>
+            <td>{{ aluno.get_serie|default:"--" }} </td>
             <td>{{ aluno.get_data_matricula|date:'d/m/Y' }}</td>
           </tr>
         {% empty %}
